add html  banner

--- a/index.html
+++ b/index.html
@@ -1,11 +1,41 @@
 <!DOCTYPE html>
 <html lang="fa" dir="rtl">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>zarinpal</title>
-</head>
-<body>
-    
-</body>
+   <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>zarinpal</title>
+      <link rel="stylesheet" href="./styles/style.css" />
+      <link rel="stylesheet" href="./styles/fonts.css" />
+   </head>
+
+   <body>
+      <a href="#" class="borderLess">
+         <div class="imgContainer">
+            <img class="backg" src="./images/backg-bannerlogo.svg" alt="" />
+         </div>
+         <div class="center">
+            <h5 class="heading">زرین‌پالِ امروز، بدون مرز است.</h5>
+            <button class="btnClick">
+               <span class="label">مطالعه بیشتر</span>
+               <div class="arrowLeftIcon">
+                  <svg
+                     xmlns="http://www.w3.org/2000/svg"
+                     width="800px"
+                     height="800px"
+                     viewBox="0 0 24 24"
+                     fill="none"
+                  >
+                     <path
+                        d="M6 12H18M6 12L11 7M6 12L11 17"
+                        stroke="#000000"
+                        stroke-width="2"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                     />
+                  </svg>
+               </div>
+            </button>
+         </div>
+      </a>
+   </body>
 </html>
