Implementation of header html structure

--- a/index.html
+++ b/index.html
@@ -6,36 +6,74 @@
       <title>zarinpal</title>
       <link rel="stylesheet" href="./styles/style.css" />
       <link rel="stylesheet" href="./styles/fonts.css" />
+      <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
    </head>
 
    <body>
-      <a href="#" class="borderLess">
-         <div class="imgContainer">
-            <img class="backg" src="./images/backg-bannerlogo.svg" alt="" />
-         </div>
-         <div class="center">
-            <h5 class="heading">زرین‌پالِ امروز، بدون مرز است.</h5>
-            <button class="btnClick">
-               <span class="label">مطالعه بیشتر</span>
-               <div class="arrowLeftIcon">
-                  <svg
-                     xmlns="http://www.w3.org/2000/svg"
-                     width="800px"
-                     height="800px"
-                     viewBox="0 0 24 24"
-                     fill="none"
-                  >
-                     <path
-                        d="M6 12H18M6 12L11 7M6 12L11 17"
-                        stroke="#505050"
-                        stroke-width="2"
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                     />
-                  </svg>
-               </div>
-            </button>
-         </div>
-      </a>
+      <article>
+         <a href="#" class="borderLess">
+            <div class="imgContainer">
+               <img class="backg" src="./images/backg-bannerlogo.svg" alt="" />
+            </div>
+            <div class="center">
+               <h5 class="heading">زرین‌پالِ امروز، بدون مرز است.</h5>
+               <button class="btnClick">
+                  <span class="label">مطالعه بیشتر</span>
+                  <div class="arrowLeftIcon">
+                     <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="800px"
+                        height="800px"
+                        viewBox="0 0 24 24"
+                        fill="none"
+                     >
+                        <path
+                           d="M6 12H18M6 12L11 7M6 12L11 17"
+                           stroke="#505050"
+                           stroke-width="2"
+                           stroke-linecap="round"
+                           stroke-linejoin="round"
+                        />
+                     </svg>
+                  </div>
+               </button>
+            </div>
+         </a>
+      </article>
+
+      <div class="container">
+         <header class="header">
+            <div>
+               <img src="./images/logo-white.svg" alt="Logo">
+            </div>
+            <div>
+               <nav>
+                  <ul>
+                     <li>
+                        <span>
+                           محصولات
+                           <svg></svg>
+                        </span>
+                        <ul></ul>
+                     </li>
+                     <li>تعرفه‌ها</li>
+                     <li>توسعه‌دهندگان</li>
+                     <li>تماس‌یاما</li>
+                     <li>
+                        <span>
+                           بیش‌تر
+                           <svg>
+
+                           </svg>
+                        </span>
+                        <ul></ul>
+                     </li>
+                  </ul>
+               </nav>
+               <a href="">زرین‌پال من</a>
+            </div>
+         </header>
+      </div>
+
    </body>
 </html>
